--- a/client/shared-components/StoryInfo/storyinfo.css
+++ b/client/shared-components/StoryInfo/storyinfo.css
@@ -3,13 +3,13 @@
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(7, 1fr);
-  height: 100%;
+  height: 70%;
   width: 100%;
   margin: 0 auto;
-
   background-color: black;
   border-radius: 6px;
   z-index: 2;
+  padding-top: 2em;
 }
 
 .container div
@@ -22,30 +22,39 @@
 {
   grid-area: 1 / 1 / span 4 / span 5;
   border-radius: 50%;
-  background-image:  url("http://localhost:3001/assets/images/placeholder.jpeg")  ;
+  background-image:  url("http://localhost:3001/assets/images/placeholder.jpeg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
+  height: 70%;
 }
 
 .calendar
 {
   grid-area: 1 / 6 / span 4 / span 5;
-  margin: 50% 0 0 0;
-  text-align: center;
+  margin: 0 0 30px 0;
   position: relative;
+  text-align: center;
 }
 
-.calendar::after
+.calendar div
 {
-  content: " (" attr(data-date) ")";
-
+  display: inline-block;
+  border: groove 2px silver;
+  height: fit-content;
+  width: 50px;
+  font-size: small;
 }
 
+.calendar label
+{
+  display: block;
+  font-family: Sans-Serif;
+  font-size: small;
+}
  .upThumb
 {
-  grid-area: 5 / 2 / span 2 / span 2;
+  grid-area: 5 / 2 / span 1 / span 2; /* row col row-span col-span */
   background-image:  url("http://localhost:3001/assets/images/icon-thumbsup.jpg");
   background-size: contain;
   background-position: center;
@@ -53,37 +62,41 @@
   color: white;
 }
 
-.upThumbCount
-{
-  grid-area: 7 / 2 / span 2 / span 2;
-  color: white;
-}
-
 .downThumb
 {
-  grid-area: 5 / 5 / span 2 / span 2;
+  grid-area: 5 / 5 / span 1 / span 2;
   background-image:  url("http://localhost:3001/assets/images/icon-thumbsdown.jpg");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-.downThumbCount
-{
-  grid-area:7 / 5 / span 2 / span 2;
-}
-
 .views
 {
-  grid-area: 5 / 8 / span 2 / span 2;
+  grid-area: 5 / 8 / span 1 / span 2;
   background-image:  url("http://localhost:3001/assets/images/icon-views.jpg");
   background-size: 4.5em;
   background-position: center;
   background-repeat: no-repeat;
 }
 
+
+
+.upThumbCount
+{
+  grid-area: 6 / 2 / span 2 / span 2;
+  color: white;
+}
+
+.downThumbCount
+{
+  grid-area: 6 / 5 / span 2 / span 2;
+}
+
 .viewsCount
 {
-  grid-area: 7 / 8 / span 2 / span 2;
+  grid-area: 6 / 8 / span 2 / span 2;
 }
+
+
 
