--- a/client/home/Home/home.css
+++ b/client/home/Home/home.css
@@ -40,6 +40,7 @@
   bottom: 0;
 }
 
+
   /* STORY / VIDEO  CONTAINER */
 .storyContainer
 {
@@ -72,20 +73,16 @@
   /* margin: 0 auto; */
   width: auto;
   height: auto;
+
+  height: 1em;
+  width: 1em;
 }
 
-/* STORY CLASS WITHOUT data-state attribute  --> ENABLE BLINKER*/
-/* .story:not([data-state="off"])::after */
 .story[data-state="on"]::after
-
 {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
   content: "•";
-  font-size: large;
-
+  font-size: xx-small;
+  line-height: 0;
   animation-name: blinker;
   animation-duration: 1.5s;
   animation-iteration-count: infinite;
@@ -126,6 +123,7 @@
   color: #fff;
   font-size: xx-small;
   margin-right: 200px;
+  display: inline-block;
 }
 
 /* HOVERING STORY TOOL REVEALS STORY TOOLTIP */
@@ -217,40 +215,70 @@
   background-color: gray;
   border: black groove 4px;
 }
-/* PROFILE */
-.imgContainer span
+
+
+/* BUTTONS UNDER PROFILE PICTURE */
+.imgContainer > div:first-child  > div > a > button
 {
   display: inline-block;
   position: relative;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  width: 1em;
-  height: 1em;
-  padding : 0 1em 0 0;
+  width: 1.5em;
+  height: 1.5em;
+  border: none;
+  outline: none;
 }
 
+/*  ANCHORS HOUSING BUTTONS */
+
+.imgContainer > div:nth-child(1)  > div > a
+{
+  width: 1.5em;
+  margin-left: 1.5em;
+  outline: none;
+  cursor: pointer;
+}
+
+
 /* PROFILE SOCIAL MEDIA LINKEDIN*/
-.imgContainer span[title="linkedin-icon"]
+.imgContainer > div:first-child  > div > a > button[title="linkedin-icon"]
 {
   background-image: url("http://localhost:3001/assets/images/icon-linkedin.png");
 }
+
 /* PROFILE SOCIAL MEDIA FACEBOOK*/
-.imgContainer span[title="facebook-icon"]
+.imgContainer button[title="facebook-icon"]
 {
   background-image: url("http://localhost:3001/assets/images/icon-facebook.png");
-  opacity: 1;
+  opacity: 0.4;
 }
+
 /* PROFILE SOCIAL MEDIA TWITTER*/
-.imgContainer span[title="twitter-icon"]
+.imgContainer button[title="twitter-icon"]
 {
   background-image: url("http://localhost:3001/assets/images/icon-twitter.png");
+  opacity: 0.4;
 }
+
 /* PROFILE SOCIAL MEDIA MEDIAN*/
-.imgContainer span[title="medium-icon"]
+.imgContainer button[title="medium-icon"]
 {
   background-image: url("http://localhost:3001/assets/images/icon-medium.png");
 }
+
+
+.imgContainer > div:nth-child(1)  > div button:hover
+{
+  border: 1px blue groove;
+}
+
+.imgContainer > div:nth-child(1)  > div button:active
+{
+  background-color: cornflowerblue;
+}
+
 
 /* WEB LINKS CONTAINER */
 .linksContainer
@@ -262,7 +290,7 @@
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: 30% auto 30% ;
 }
-.linksContainer div
+.linksContainer a
 {
   border-radius:5px;
   border: 2px groove black;
@@ -273,33 +301,33 @@
 }
 
 /* WEB LINKS */
-.linksContainer div:nth-child(1)
+.linksContainer a:nth-child(1)
 {
   grid-row: 2 / span 1;
   grid-column: 1 / span 1;
   background-image: url("http://localhost:3001/assets/images/icon-home.png");
 }
-.linksContainer div:nth-child(2)
+.linksContainer a:nth-child(2)
 {
   grid-row: 2 / span 1;
   grid-column: 2 / span 1;
   background-image: url("http://localhost:3001/assets/images/icon-email.png");
 }
-.linksContainer div:nth-child(3)
+.linksContainer a:nth-child(3)
 {
   grid-row: 2 / span 1;
   grid-column: 3 / span 1;
   background-image: url("http://localhost:3001/assets/images/icon-apps.png");
 }
 
-.linksContainer div:nth-child(4)
+.linksContainer a:nth-child(4)
 {
   grid-row: 2 / span 1;
   grid-column: 4 / span 1;
   background-image: url("http://localhost:3001/assets/images/icon-links.png");
 }
 
-.linksContainer div:nth-child(5)
+.linksContainer a:nth-child(5)
 {
   grid-row: 2 / span 1;
   grid-column: 5 / span 1;
