--- a/client/shared-components/Banner/banner.css
+++ b/client/shared-components/Banner/banner.css
@@ -11,11 +11,16 @@ body{
   background-color: gray;
   border-color: darkgray;
   height: 0.8em;
+
+  counter-reset: cnt;
+
 }
 
 
 .container span
 {
+  display: inline;
+
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 0.5rem;
 }
@@ -25,16 +30,13 @@ body{
   color: white;
 }
 
-.container span
+.container > span[title]
 {
+  display: inline;
+  grid-column: 2 / span 2;
   text-align: center;
   /* line-height: 1.5em; */
-}
-
-
-.bannerName
-{
-  grid-column: 2 / span 2;
+  counter-increment: cnt;
 }
 
 footer
