--- a/client/email/email.css
+++ b/client/email/email.css
@@ -3,7 +3,6 @@
   height: 20px;
   width: 100%;
   border: groove 2px blueviolet;
-
 }
 
 .input
@@ -11,9 +10,7 @@
   display: grid;
   height: fit-content;
   width: 400px;
-
   margin: 20px auto 0 auto ;
-
   grid-template-columns: 60% 30%;
   grid-template-rows: 40px 60px 20px;
 }
@@ -25,28 +22,25 @@
   grid-row: 1;
   grid-column: 1;
   border: 2px groove purple;
+  border-radius: 4px;
+  height: 80%;
+  text-align: center;
+
 }
+
 /* text area */
-.input textarea
+.input > textarea
 {
   grid-row: 2;
   grid-column: 1 / end;
 }
 
+/* submit */
 
-/* image container */
-.input > div:nth-child(3) 
+.input > input:nth-of-type(2)
 {
-  display: grid;
-  grid-template-columns: repeat(10,1fr);
-  grid-template-rows: repeat(10,1fr);
-
-}
-
-.input div button
-{
-  grid-column: 10;
-  grid-row: 5;
+  grid-column:1 ;
+  grid-row: 3;
   border: 2px groove black;
   width: 80px;
   height: 20px;
@@ -55,6 +49,34 @@
   border-radius: 4px;
 }
 
+/* Insert Image Button */
+
+.input > button
+{
+  grid-column: 2;
+  grid-row: 1;
+  border: 2px groove black;
+  width: 80px;
+  height: 20px;
+  font-size: 8px;
+  font-weight: bold;
+  border-radius: 4px;
+  margin-left: 2em;
+}
+
+/* select visibility */
+
+.input > select
+{
+  grid-column: 3;
+  grid-row: 1;
+  border: 2px groove black;
+  width: 80px;
+  height: 20px;
+  font-size: 8px;
+  font-weight: bold;
+  border-radius: 4px;
+}
 
 .input div button:hover
 {
@@ -118,14 +140,11 @@
   grid-column: 1 / span 1;
   grid-row: 1 / end;
   border: 2px groove;
-  border-right-color: black;
 
   display: grid;
   grid-template-rows: repeat(50, 1fr);
   grid-template-columns: repeat(50, 1fr);
-
-  overflow-y: auto;
-
+  overflow: hidden;
 }
 
 /* user meta block -> image */
@@ -134,7 +153,7 @@
   grid-row: 1 / span 50;
   grid-column: 1 / span 15;
   border: 1px groove black;
-  border-radius: 50%;
+  border-radius: 2px;
   background: center no-repeat url('http://localhost:3001/assets/images/bg.jpg')  ;
 }
 
