--- a/client/shared-components/Banner/banner.css
+++ b/client/shared-components/Banner/banner.css
@@ -35,13 +35,12 @@ body{
   display: inline;
   grid-column: 2 / span 2;
   text-align: center;
-  /* line-height: 1.5em; */
   counter-increment: cnt;
 }
 
 footer
 {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 1.2rem;
