--- a/client/email/email.css
+++ b/client/email/email.css
@@ -25,7 +25,6 @@
   border-radius: 4px;
   height: 80%;
   text-align: center;
-
 }
 
 /* text area */
@@ -36,7 +35,6 @@
 }
 
 /* submit */
-
 .input > input:nth-of-type(2)
 {
   grid-column:1 ;
@@ -48,24 +46,131 @@
   font-weight: bold;
   border-radius: 4px;
 }
-
-/* Insert Image Button */
-
-.input > button
+/* Insert Image Button 
+.input > span:nth-of-type(1)
 {
   grid-column: 2;
   grid-row: 1;
   border: 2px groove black;
   width: 80px;
-  height: 20px;
+  height: 30px;
   font-size: 8px;
   font-weight: bold;
   border-radius: 4px;
   margin-left: 2em;
+  text-align: center;
 }
 
-/* select visibility */
+.input > span:nth-of-type(1) > label ~ input
+{
+  width: 55px;
+  height: 20px;
+  font-size: smaller;
+  background-color: none;
+  border: transparent
+} */
 
+/* spirit animal section */
+.input > span:nth-of-type(1)
+{
+  grid-column: 2;
+  grid-row: 1;
+  border: 2px groove black;
+  width: 80px;
+  height: 30px;
+  font-size: 8px;
+  font-weight: bold;
+  border-radius: 4px;
+  margin-left: 2em;
+  text-align: center;
+}
+
+.input > span:nth-of-type(1) > label ~ img
+{
+  width: 25px;
+  height: 15px;
+  font-size: smaller;
+  background-color: none;
+  border: 2px groove black;
+  margin: 0 auto;
+  object-fit: cover;
+  display: block;
+}
+
+.input > span:nth-of-type(1) > div
+{
+  display: block;
+  height: 100px;
+  width: 200px;
+  border: black groove 1px;
+  background-color: pink;
+  margin-right: 20px;
+}
+
+.modal 
+{
+  display: none;
+  position: fixed;
+  z-index: 0;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0, 0.8) ;
+}
+.modalContent
+{
+  border: 2px groove black;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+} 
+.modalClose
+{
+  color: red;
+  float: right;
+  font-weight: bold;
+  font-size: 25px;
+  width: 22px;
+}
+.modalClose:hover
+{
+  color: red;
+}
+
+.modalSelectionWindow
+{
+    display: flex;
+    border: black 2px groove;
+    width: 80%;
+    height: 40%;
+    margin: 10% auto 0 auto;
+    align-content: space-between;
+    flex-wrap: wrap;
+    z-index: 2;
+    overflow-y: auto;
+    background-color: whitesmoke;
+
+}
+.modalSelectionWindow > img 
+{
+  border: yellow 1px groove;
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  z-index: 6;
+}
+
+.modalSelectionWindow > img:hover 
+{
+  border-color: blue;
+  border-width: 3px;
+} 
+
+
+/* select visibility */
 .input > select
 {
   grid-column: 3;
@@ -98,16 +203,6 @@
   border-radius: 4px;
 }
 
-.input input:last-child:hover
-{
-  background-color: gray;
-}
-.input input:last-child:active
-{
-  background-color: silver;
-}
-
-
 /* testimonial container */
 .testimonialContainer
 {
@@ -116,19 +211,14 @@
   height: 10px;
   margin: 25px auto 0 auto;
 }
-.testimonialContainer[data-len="0"]::before
-{
-  /* content: "no testimonial... .. ."; */
-}
 
 .testimonial 
 {
-
   width: 80%;
   height: 50px;
   margin: 0 auto 0 auto;
-  border: groove 2px aqua;
-
+  /* border: groove 2px aqua; */
+  border-bottom: groove 1px black;
   display: grid;
   grid-template-rows: repeat(50, 1fr);
   grid-template-columns: 20% 80% ;
@@ -139,7 +229,7 @@
 {
   grid-column: 1 / span 1;
   grid-row: 1 / end;
-  border: 2px groove;
+  border: 0.5px groove silver;
 
   display: grid;
   grid-template-rows: repeat(50, 1fr);
@@ -148,20 +238,19 @@
 }
 
 /* user meta block -> image */
-.testimonial div:first-child > span:nth-child(1)
+.testimonial div:first-child > img:nth-child(1)
 {
   grid-row: 1 / span 50;
   grid-column: 1 / span 15;
-  border: 1px groove black;
-  border-radius: 2px;
-  background: center no-repeat url('http://localhost:3001/assets/images/bg.jpg')  ;
+  object-fit: fill;
+  width: 50px;
 }
 
-/* user meta block -> time stamp */
+/* user meta block -> data */
 .testimonial div:first-child > span:nth-child(2)
 {
   grid-row: 1 / span 10;
-  grid-column: 37 / end;
+  grid-column: 5 / end;
   font-size: 10px;
   line-height: auto;
   text-align: center;
@@ -169,12 +258,11 @@
   color: gray;
 }
 
-
 /* user meta block -> user name */
 .testimonial div:first-child > span:nth-child(3)
 {
   grid-row: 20 / span end;
-  grid-column: 20 / span end;
+  grid-column: 15 / span end;
   font-size: small;
   line-height: 20px;
   word-wrap: normal;
@@ -187,7 +275,7 @@
 {
   grid-column: 2;
   grid-row: 1/ end;
-  background-color: red;
+  background-color:dimgray;
 
   display: grid;
   grid-template-rows: repeat(50, 1fr);
@@ -195,23 +283,15 @@
   overflow-y: auto;
 } 
 
-/* user rating/message block -> stars */
-.testimonial div:last-child > span
-{
-  grid-row: 4 / span 15;
-  grid-column: 3 / span 7;
-  line-height: 50%;
-}
-
 /* user rating/message block -> message */
 .testimonial div:last-child > p
 {
-  grid-row: 6 / span end;
+  grid-row: 5 / span end;
   grid-column:  2 / span 45;
   font-size: small;
-  line-height: auto;
+  font-weight: bold;
+  line-height: 1em;
 }
-
 
 .star::before 
 {
