--- a/client/links/links.css
+++ b/client/links/links.css
@@ -4,8 +4,6 @@
   grid-template-columns: repeat(40, 2fr);
 }
 
-
-
 .pageTitle
 {
   width: 100%;
@@ -21,7 +19,7 @@
 .container > div
 {
   background-color: lightgray;
-  border: groove 2px black;
+  border: groove 1px black;
   grid-column: 5 / span 30;
   width: 100%;
   height: auto;
@@ -57,7 +55,7 @@
 {
   display: inline;
   width: 100%;
-  border: groove 1px black;
+  border-left: groove 2px black;
   /* height: 100%; */
   grid-column: 6 / span 15;
 }
@@ -66,6 +64,8 @@
 {
   font-family: sans-serif;
   padding-left: 2em;
+  font-size: medium;
+  font-style: italic;
 }
 
 
@@ -87,6 +87,6 @@
 .container > div > span:nth-child(1) > label > p > a
 {
   display: block;
-  line-height: 1em;
+  line-height: 1em; 
 }
 
