--- a/client/email/email.css
+++ b/client/email/email.css
@@ -5,6 +5,73 @@
   border: groove 2px blueviolet;
 }
 
+.auth
+{
+  /* position: absolute; */
+  width: 400px;
+  height: 300px;
+  border: gray 1px groove;
+  border-radius: 5px;
+  margin: 150px auto 0 auto;
+  display: grid;
+  grid-template-columns: repeat(50, 1fr);
+  grid-template-rows: repeat(50, 1fr);
+  background-color: tan;
+}
+
+.auth  > span 
+{
+  grid-row: 20 / span 5;
+  grid-column: 32 /  span 3;
+  border-radius: 50%;
+  border: 1px black groove;
+  width: 10px;
+  height: 10px;
+  font-size: 8px;
+  color: black;
+  text-align: center;
+}
+
+.auth > span:hover,
+{
+  border-color: aliceblue;
+}
+
+.auth > p
+{
+  visibility: hidden;
+  margin-top: 5px;
+  width: 150px;
+  height: fit-content;
+  background-color: white;
+  border:groove 2px black;
+  grid-row: 20 / span 5;
+  grid-column: 35 /  span 3;
+  font-size: 12px;
+  font-family: sans-serif;
+} 
+
+.auth  > input 
+{
+  grid-row: 20 / span 5;
+  grid-column: 10 /  span 20;
+  border-radius: 2px;
+}
+
+.auth  > button
+{
+  grid-row: 35 / span 5;
+  grid-column: 10 / span 10;
+  border-radius: 8px;
+  width: fit-content;
+  height: fit-content;
+}
+
+.auth  > button:hover
+{
+  background-color: silver;
+}
+
 .input
 {
   display: grid;
@@ -413,30 +480,37 @@
   display: grid;
   grid-template-rows: repeat(50, 1fr);
   grid-template-columns: repeat(50, 1fr);
-  height: 100%;
+  /* height: 100%; */
+  padding-top: 0;
+  margin-top: 0;
 } 
 
 /* user rating/message block -> message */
-.testimonial div:last-child > p
+.testimonial div:last-child > textarea
 {
-  grid-row: 5 / span end;
-  grid-column:  2 / span 45;
+  grid-row: 1 / span end;
+  grid-column:  1 / span end;
   font-size: small;
   font-weight: bold;
-  height: max-content;
-  overflow-y: none;
+  /* overflow-y: none; */
+  resize: none;
+  overflow: hidden;
+  outline: none;
 }
 
 .testimonial div:last-child >  button
 {
-  grid-row: 40 / span end;
-  grid-column:  48/ span end;
+  grid-row: 44 / span 2;
+  grid-column:  49/ span end;
   line-height: 0;
-  background: none;
+  /* background: none; */
   width: fit-content;
   outline: none;
-  padding-top: 0px;
   visibility: hidden;
+  border: black 1px groove;
+  z-index: 3;;
+  height: fit-content;
+  bottom: 0;
 }
 
 /* expander button */
@@ -454,7 +528,7 @@
 }
 .testimonial div:last-child >  button > .expanderCompressOn
 {
-  color: white;
+  color: rgb(193, 68, 68);
   opacity: 1;
 }
 
@@ -464,4 +538,5 @@
 {
   background-color: white;
   border: none;
+  visibility: hidden;
 }
