--- a/client/projects/Projects.css
+++ b/client/projects/Projects.css
@@ -1,10 +1,11 @@
 .container
 {
   display: grid;
-  grid-template-columns: 400px 400px;
-  grid-template-rows: 400px 400px;
+  grid-template-columns: 250px 250px;
+  grid-template-rows: 250px 250px;
   justify-content: center;
   padding-top: 200px;
+  z-index: 1;
 }
 
 .container > button:nth-child(1)
@@ -111,3 +112,109 @@
   border: groove purple 2px;
   opacity: 1;
 }
+
+.container2
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 95%;
+  margin-top: 10px;
+}
+
+.slideContainer  
+{
+  width: 100%;
+  height: 100px;
+  background-color: whitesmoke;
+  border: groove 1px black;
+  display: grid;
+  grid-template-columns: repeat(100, 0.5fr);
+  grid-template-rows: 100px;
+}
+
+.slideContainer > span > span:nth-of-type(n)
+{
+  border: groove yellow 0.1px;
+  font-size: 3px;
+}
+
+.slideContainer > span > span:nth-of-type(n) > img 
+{
+  position: absolute;
+  
+}
+.slideContainer  > button:nth-of-type(1)
+{
+  grid-column: 100 ;
+  background-color: white;
+  border: groove 1px red;
+  margin: 0;
+  grid-row: 1 / span end;
+  z-index: 3;
+}
+
+.slideContainer  > button:nth-of-type(2)
+{  
+  grid-row: 1 / span end;
+  grid-column: 1;
+  background-color: white;
+  border: groove 1px red;
+  margin: 0;
+  z-index: 3;
+}
+
+.slideContainer  > span:first-child
+{
+  grid-row: 1 / span end;
+  grid-column: 2 / span 98;
+  border: 4px red groove;
+
+  display: grid;
+  grid-template-columns: repeat(100, 1fr);
+  grid-template-rows: 100px;
+}
+
+.slideContainer  > button:nth-of-type(2):hover,
+.slideContainer  > button:nth-of-type(1):hover
+{
+  background-color: gray;
+}
+
+.slideContainer  > button:nth-of-type(2):active,
+.slideContainer  > button:nth-of-type(1):active
+{
+  background-color: silver;
+}
+
+.colorMe 
+{
+  position: absolute;
+  top:50%;
+  left: 0;
+  width: 50px;
+  height: 50px;
+}
+
+.movieBox
+{
+  display: inline;
+  border: groove 2px black;
+  width: 100px;
+  height: 90px;
+  position: absolute;
+  object-fit: cover;
+}
+
+
+/* .slideContainer > span > span:nth-of-type(2n) > span 
+{
+  background-color: aqua;
+}
+
+.slideContainer > span > span:nth-of-type(2n + 1) > span 
+{
+  background-color: pink;
+
+}  */
