--- a/client/projects/Projects.css
+++ b/client/projects/Projects.css
@@ -15,9 +15,7 @@
   grid-row: 1/ span 1;
   grid-column: 1 / span 1;
   z-index: 0;
-
 }
-
 
 .container > button:nth-child(1) ::before
 {
@@ -125,24 +123,27 @@
 
 .slideContainer  
 {
-  width: 100%;
-  height: 100px;
+  width: 99%;
+  height: 120px;
   background-color: whitesmoke;
-  border: groove 1px black;
   display: grid;
   grid-template-columns: repeat(100, 0.5fr);
-  grid-template-rows: 100px;
+  grid-template-rows: 120px;
+  margin: 0 auto;
+  margin-top: 4px;
+
 }
 
 .slideContainer > span > span:nth-of-type(n)
 {
-  border: groove yellow 0.1px;
   font-size: 3px;
 }
 
 .slideContainer > span > span:nth-of-type(n) > img 
 {
   position: absolute;
+  margin: auto;
+
   
 }
 .slideContainer  > button:nth-of-type(1)
@@ -174,6 +175,9 @@
   display: grid;
   grid-template-columns: repeat(100, 1fr);
   grid-template-rows: 100px;
+  text-align: left;
+  padding-left: 2em;
+  padding-right: 2em;
 }
 
 .slideContainer  > button:nth-of-type(2):hover,
@@ -188,33 +192,13 @@
   background-color: silver;
 }
 
-.colorMe 
-{
-  position: absolute;
-  top:50%;
-  left: 0;
-  width: 50px;
-  height: 50px;
-}
-
 .movieBox
 {
   display: inline;
-  border: groove 2px black;
   width: 100px;
   height: 90px;
   position: absolute;
-  object-fit: cover;
+  object-fit: contain;
+  padding-top: 2em;
 }
 
-
-/* .slideContainer > span > span:nth-of-type(2n) > span 
-{
-  background-color: aqua;
-}
-
-.slideContainer > span > span:nth-of-type(2n + 1) > span 
-{
-  background-color: pink;
-
-}  */
