--- a/client/about/about.css
+++ b/client/about/about.css
@@ -2,18 +2,34 @@
 body 
 {
   background-color: ivory;
-
 }
 
-.main
+.container
 {
-  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(100, 1fr );
+  grid-template-rows: repeat(100, 1fr );
+  height: 97%;
+  width: 99.7%;
+  position: absolute;
+  margin-top: 14px;
 }
+
+.container > span 
+{
+  display: inline;
+  background-color: red;
+  border: 1px groove black;
+}
+
+.container > p 
+{
+  grid-area: 20 / 40 / 40 / 65;
+} 
 
 h1 {
   /* border : red 2px groove; */
 }
-
 
 .pBox
 {
@@ -22,7 +38,6 @@ h1 {
   width: 100%;
   text-align: center;
   padding-top: 10px;
-
 }
 
 .pBox p {
@@ -34,16 +49,93 @@ h1 {
 }
 
 
+.yearlyInfo
+{
+  grid-area: 10 / 30 / 65 / 80;
+  border: groove darkslategray 3px;
+  overflow-y: scroll;
+
+}
+
+.yearlyInfo[data-currYear="0"]
+{
+  background: center no-repeat url('http://localhost:3001/assets/images/icon-noFile.png')  ;
+  background-size: 25px;
+}
+
+.yearlyInfo[data-currYear] > p
+{
+  border: ridge silver 2px;
+  border-radius: 4px;
+  counter-increment: index;
+
+  font-family: fantasy;
+  font-size: x-large;
+}
+
+.yearlyInfo[data-currYear] > p::before
+{
+  content: counter(index)".";
+  left: 0;
+  position: relative;
+}
+
+
+.yearlyInfo[data-currYear]::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+}
+
+.yearlyInfo[data-currYear]::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .5);
+}
+
 .yearlyTestimonial
 {
+  grid-area: 1 / 1 / 80 / 15;
+
   margin-top: 1em;
+
   display: grid;
-  grid-template-columns: repeat(10, 10fr);
-  grid-template-rows: repeat(20, 40px);
-  width: 100%;
-  height: 100%;
-  /* border: green 4px dotted; */
+  grid-template-columns: repeat(100, 1fr);
+  grid-template-rows: repeat(100, 1fr);
 }
+
+.yearlyTestimonial > ul 
+{
+  grid-area: 10 / 1 / 80 / 100;
+  text-align: center;
+  list-style-type: none;
+  padding: 0;
+}
+
+.yearlyTestimonial ul li
+{
+  list-style-type: none;
+  border: groove 2px silver;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  padding-top: 10px;
+  border-radius: 5px;
+  line-height: 30px;
+}
+
+.yearlyTestimonial ul li:hover
+{
+  color: white;
+  background-color: black;
+  cursor: grab;
+}
+
+.yearlyTestimonial ul li:active
+{
+  cursor: grabbing;
+
+  background-color: gray;
+}
+
 .yearlyTestimonial > div 
 {
     text-align: center;
