--- a/client/shared-components/Banner/banner.css
+++ b/client/shared-components/Banner/banner.css
@@ -11,18 +11,21 @@ body{
   background-color: gray;
   border-color: darkgray;
   height: 0.8em;
-
-  counter-reset: cnt;
-
+  width: 100%;
+  position: absolute;
+  top:0;
 }
 
 
 .container span
 {
-  display: inline;
-
+  position: absolute;
+  display: inline-block;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 0.5rem;
+  font-size: 0.4rem;
+  top:0;
+  position: absolute;
+  background-color: gray;
 }
 
 .container span:hover
@@ -33,9 +36,8 @@ body{
 .container > span[title]
 {
   display: inline;
-  grid-column: 2 / span 2;
+  grid-column: 2 / span 4;
   text-align: center;
-  counter-increment: cnt;
 }
 
 footer
