--- a/client/about/about.css
+++ b/client/about/about.css
@@ -93,10 +93,8 @@ h1 {
 
 .yearlyTestimonial
 {
-  grid-area: 1 / 1 / 80 / 15;
-
+  grid-area: 1 / 10 / 80 / 20;
   margin-top: 1em;
-
   display: grid;
   grid-template-columns: repeat(100, 1fr);
   grid-template-rows: repeat(100, 1fr);
@@ -136,77 +134,34 @@ h1 {
   background-color: gray;
 }
 
-.yearlyTestimonial > div 
+.quoteMe
 {
-    text-align: center;
-}
-
-.yearlyTestimonial > div:nth-of-type(1)
-{
-  display: inline;
-  grid-column: 3 / span 6;
-  grid-row: 1 / span 10 ;
+  grid-area: 5 / 92 / 10 / 95;
+  border: black groove 5px;
+  border-radius: 60%;
+  background-color: gray;
   display: grid;
-  grid-template-columns: repeat(50, 1fr);
-  grid-template-rows: repeat(50, 1fr);
-
+  grid-template-columns: repeat(100, 1fr);
+  grid-template-rows: repeat(100, 1fr);
 }
 
-.yearlyTestimonial > div:nth-of-type(1) > select
+.quoteMe > span 
 {
-  grid-row: 2 / span 3;
-  grid-column: 22/ span 10;
-  font-family: fantasy;
-  text-align: center;
+  grid-area:  50 / 50 / span 1 / span 1;
+  font-size: xx-large;
 }
 
-.yearlyTestimonial > div:nth-of-type(1) > div[data-currYear]
-{
-  grid-row: 7 / span 30 ;
-  grid-column: 5/ span 45;
-
-  overflow-y: scroll;
-  border-radius: 4px;
-  padding-left: 4em;
-  padding-right: 4em;
-  counter-reset: index;
-}
-
-.yearlyTestimonial > div:nth-of-type(1) > div
-{
-  margin: 0 auto;
-}
-.yearlyTestimonial > div:nth-of-type(1) > div[data-currYear]::-webkit-scrollbar {
-  -webkit-appearance: none;
-  width: 7px;
-}
-
-.yearlyTestimonial > div:nth-of-type(1) > div[data-currYear]::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  background-color: rgba(0, 0, 0, .5);
-}
-
-.yearlyTestimonial > div:nth-of-type(1) > div[data-currYear] > p
-{
-  border: ridge silver 2px;
-  border-radius: 4px;
-  counter-increment: index;
-
-  font-family: fantasy;
-
-}
-
-.yearlyTestimonial > div:nth-of-type(1) > div[data-currYear] > p::before
-{
-  content: counter(index)".";
-  left: 0;
-  position: relative;
-}
-
-.yearlyTestimonial > div:nth-of-type(1) > div[data-currYear="0"]
-{
-  background: center no-repeat url('http://localhost:3001/assets/images/icon-noFile.png')  ;
-  background-size: 25px;
+.showMessage {
+  grid-area: 11 / 60 / 60 / 98;
+  visibility: collapse;
+  border: groove 2px  black;
+  z-index: 4;
+  background-color: skyblue;
+  border-radius: 4px;;
+  font-weight: bold;
+  height: fit-content;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: x-large;
 }
 
 .filler
