--- a/client/about/about.css
+++ b/client/about/about.css
@@ -152,21 +152,63 @@ h1 {
 }
 
 .showMessage {
-  grid-area: 11 / 60 / 60 / 98;
+  grid-area: 12 / 75 / 72 / 98;
   visibility: collapse;
   border: groove 2px  black;
   z-index: 4;
-  background-color: skyblue;
   border-radius: 4px;;
   font-weight: bold;
-  height: fit-content;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: x-large;
+  
+  display: grid;
+  grid-template-columns: repeat(100, 1fr);
+  grid-template-rows: repeat(100, 1fr);
 }
 
-.filler
+.showMessage > label 
 {
-  display: block;
-  background-size: cover;
+  grid-area: 7 / 44 / 10 / 65;
+  z-index: 6;
+  text-decoration: underline;
+  font-size: larger;
+}
 
+.showMessage > p 
+{
+  grid-area: 10 / 15 / 70 / 90;
+  z-index: 6;
+  max-width: fit;
+}
+
+.showMessage > img 
+{
+  grid-area: 1 / 10 / span 10 / span 10;
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  z-index: 4;
+}
+
+.showMessage > span:nth-of-type(1) 
+{
+  display: inline-block;
+  grid-area: 1 / 1 /  end /  span 6;
+  background-color: dimgrey;
+  z-index: 6;
+}
+
+.showMessage > span:nth-of-type(2) 
+{
+  display: inline-block;
+  grid-area: 1 / 96 /  end /  span 6;
+  background-color: dimgrey;
+  z-index: 6;
+}
+
+.showMessage > span:nth-of-type(3) 
+{
+  display: inline-block;
+  grid-area: 1 / 6 /  end /  span 90;
+  background-color: silver;
 }
